feat: implement cv

--- a/index.html
+++ b/index.html
@@ -1,1 +1,321 @@
-Hello World
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Andrii Melnychuk - Full stack JavaScript, Node.js, React, React Native Developer</title>
+    <link rel="stylesheet" href="icons/fontawesome-free-6.2.1-web/css/fontawesome.min.css">
+    <link rel="stylesheet" href="icons/fontawesome-free-6.2.1-web/css/brands.min.css">
+    <link rel="stylesheet" href="icons/fontawesome-free-6.2.1-web/css/solid.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+<div id="page-wrapper">
+    <div id="header">
+        <div id="user-name">Andrii Melnychuk</div>
+        <div id="role-to-apply">Full stack JavaScript, Node.js, React, React Native Developer</div>
+        <div id="contacts">
+            <div><i class="fa-brands fa-linkedin"></i><a href="https://www.linkedin.com/in/andruhamel" target="_blank">LinkedIn</a></div>
+            <div><i class="fa-brands fa-skype"></i><a href="https://join.skype.com/invite/oF7knmvd3nNS" target="_blank">Skype</a></div>
+            <div><i class="fa-brands fa-telegram"></i><a href="https://t.me/andruhamel" target="_blank">Telegram</a></div>
+            <div><i class="fa-solid fa-location-dot"></i><a href="https://goo.gl/maps/RME4zSzxT17neis68" target="_blank">L'viv, Ukraine</a></div>
+        </div>
+        <div id="key-technologies">
+            <div id="technology-table">
+                <div class="table-row">
+                    <div class="technology-section-name">Languages and frameworks</div>
+                    <div class="technology-list">JavaScript ES6, TypeScript, Node.js, Express.js, Nest.js, React,
+                        React
+                        Native, Redux
+                    </div>
+                </div>
+                <div class="table-row">
+                    <div class="technology-section-name">Databases</div>
+                    <div class="technology-list">MySQL, PostgreSql, Oracle and PL/SQL, Firebird, MongoDB, Redis
+                    </div>
+                </div>
+                <div class="table-row">
+                    <div class="technology-section-name">Version control</div>
+                    <div class="technology-list">Git, SVN, github, bitbucket</div>
+                </div>
+                <div class="table-row">
+                    <div class="technology-section-name">Operating systems</div>
+                    <div class="technology-list">Linux, MacOs, Windows</div>
+                </div>
+                <div class="table-row">
+                    <div class="technology-section-name">Virtualization, containerization, CI/CD</div>
+                    <div class="technology-list">docker, docker-compose, atlassian bamboo, circleCI</div>
+                </div>
+                <div class="table-row">
+                    <div class="technology-section-name">Clouds</div>
+                    <div class="technology-list">AWS (lambda functions, step functions, SQS, RDS), GCP (BigQuery)
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="cv-body">
+        <div class="cv-section-wrapper">
+            <div id="section-education" class="section-name">education</div>
+            <div class="section-list-item-wrapper">
+                <div class="section-list-item">
+                    <div class="university-degree">Master Degree in Computer Science</div>
+                    <div class="university-name">Ivan Puluj National Technical University<span
+                            class="company-location"> - Ternopil, Ukraine</span>
+                    </div>
+                    <div class="date-period">2010 – 2011</div>
+                    <div class="education-details">Course: “Computing systems and networks”</div>
+                </div>
+                <div class="section-list-item">
+                    <div class="university-degree">Bachelor Degree in Computer Science</div>
+                    <div class="university-name">Ivan Puluj National Technical University<span
+                            class="company-location"> - Ternopil, Ukraine</span>
+                    </div>
+                    <div class="date-period">2005 – 2007</div>
+                    <div class="education-details">Course: “Computing engineering”</div>
+                </div>
+            </div>
+        </div>
+        <div class="cv-section-wrapper">
+            <div id="section-experience" class="section-name">experience</div>
+            <div class="section-list-item-wrapper">
+                <div class="section-list-item">
+                    <div class="job-title">Senior full stack JavaScript Developer</div>
+                    <div class="company-name">Ciklum<span class="company-location"> - L'viv, Ukraine</span></div>
+                    <div class="date-period">September 2021 - Present</div>
+                    <div class="job-details">
+                        Main activities and responsibilities:
+                        <ul>
+                            <li>Redesign and refactoring legacy microservices;</li>
+                            <li>Moving from python to node.js;</li>
+                            <li>Migration of microservices and its dependencies from node.js 12.2 to 16;</li>
+                            <li>Rewriting self-written services based on callbacks to Nest.js, async/await, rx.js;
+                            </li>
+                            <li>Covering code of services by unit and integration tests;</li>
+                            <li>Introduction of auto-generated OpenAPI documentation;</li>
+                            <li>Automation of customer facing documentation generation and deployment.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="section-list-item">
+                    <div class="job-title">FullStack Node.js, React, React Native engineer</div>
+                    <div class="company-name">Lohika Capgemini<span
+                            class="company-location"> - L'viv, Ukraine</span>
+                    </div>
+                    <div class="date-period">October 2020 - September 2021</div>
+                    <div class="job-details">
+                        Main activities and responsibilities:
+                        <ul>
+                            <li>Redesign of get crew feature for W-2 staffing platform;</li>
+                            <li>Implementation of GraphQL API as back-end for front-end;</li>
+                            <li>Implementation of get crew feature on mobile application;</li>
+                            <li>Writing Unit/Integration tests;</li>
+                            <li>Leading mobile development team, reviewing team's pull requests, reporting to
+                                customers about development progress;
+                            </li>
+                            <li>Developed feature architecture for get crew workflow for Web and Mobile
+                                applications.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="section-list-item">
+                    <div class="job-title">Node.js backend engineer</div>
+                    <div class="company-name">Binariks Inc.<span class="company-location"> - L'viv, Ukraine</span>
+                    </div>
+                    <div class="date-period">June 2020 - October 2020</div>
+                    <div class="job-details">
+                        Main activities and responsibilities:
+                        <ul>
+                            <li>Development of serverless application for health care domain;</li>
+                            <li>Implementation of aws lambda functions and complex lambda pipelines (step function)
+                                for
+                                regular automatic data ingestion of medical records from different third party data
+                                sources and APIs;
+                            </li>
+                            <li>Post processing, validation and re-structuring of ingested data to store them in the
+                                way
+                                our application consume them;
+                            </li>
+                            <li>Collecting measurements from wearable medical devices (blood pressure, sugar
+                                etc.).
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="section-list-item">
+                    <div class="job-title">Node.js backend engineer</div>
+                    <div class="company-name">Lohika Altran<span class="company-location"> - L'viv, Ukraine</span>
+                    </div>
+                    <div class="date-period">October 2018 - June 2020</div>
+                    <div class="job-details">
+                        Main activities and responsibilities:
+                        <ul>
+                            <li>Breaking down monolith software architecture into microservices;</li>
+                            <li>Implementation of new resources on REST API;</li>
+                            <li>Bug fixing;</li>
+                            <li>Writing Unit/Integration tests;</li>
+                            <li>Setup docker environment for new microservices.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="section-list-item">
+                    <div class="job-title">Software Engineer</div>
+                    <div class="company-name">N-iX<span class="company-location"> - L'viv, Ukraine</span>
+                    </div>
+                    <div class="date-period">May 2017 – May 2018</div>
+                    <div class="job-details">
+                        Main activities and responsibilities:
+                        <ul>
+                            <li>Implementation of new and support of existing Web applications;</li>
+                            <li>Back/Frond-end development;</li>
+                            <li>Moving applications from virtual hosting to docker environment;</li>
+                            <li>Database design;</li>
+                            <li>Refactoring old monolithic applications to follow SOA;</li>
+                            <li>Extracting common across applications functionality to reusable composer packages or
+                                services with REST API;
+                            </li>
+                            <li>Covering code base with unit tests.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="section-list-item">
+                    <div class="job-title">Web/UI developer (PHP/JS)</div>
+                    <div class="company-name">Intellias<span class="company-location"> - L'viv, Ukraine</span>
+                    </div>
+                    <div class="date-period">February 2016 – May 2017</div>
+                    <div class="job-details">
+                        Main activities and responsibilities:
+                        <ul>
+                            <li>Development JSON-RPC web services;</li>
+                            <li>Frond-end development;</li>
+                            <li>Database design;</li>
+                            <li>Implementation of new resource planning module;</li>
+                            <li>Covering code base with unit tests.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="section-list-item">
+                    <div class="job-title">EAI Developer (Delphi/PHP)</div>
+                    <div class="company-name">Intellias<span class="company-location"> - L'viv, Ukraine</span>
+                    </div>
+                    <div class="date-period">March 2014 – February 2016</div>
+                    <div class="job-details">
+                        Main activities and responsibilities:
+                        <ul>
+                            <li>Implementation of System Integrator which is an API containing a collection of SOAP
+                                web
+                                services used for importing/exporting data;
+                            </li>
+                            <li>Implementation of Scheduler which is Windows Service capable of running small
+                                applications (tasks) according to selected timetable;
+                            </li>
+                            <li>Extension standard Web portal API with custom one to meat customer’s needs;</li>
+                            <li>Customization standard Web portal look and feel to match customer’s corporate
+                                design;
+                            </li>
+                            <li>Integration third party solutions into Web portal.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="section-list-item">
+                    <div class="job-title">Head of IT department</div>
+                    <div class="company-name">Public utility (Municipal) company “Ternopil'vodokanal”<span
+                            class="company-location"> - L'viv, Ukraine</span>
+                    </div>
+                    <div class="date-period">July 2013 – February 2014</div>
+                    <div class="job-details">
+                        Main activities and responsibilities:
+                        <ul>
+                            <li>Management of IT department, tasks distribution and control, implementation of IT,
+                                planning and budgeting;
+                            </li>
+                            <li>Software development and maintenance, database design and administration, server
+                                administration;
+                            </li>
+                            <li>Monitoring IT trends (software, hardware, suppliers);</li>
+                            <li>Automation and optimization company's business processes.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="section-list-item">
+                    <div class="job-title">Software developer (Delphi/PHP/JS)</div>
+                    <div class="company-name">Public utility (Municipal) company “Ternopil'vodokanal”<span
+                            class="company-location"> - L'viv, Ukraine</span>
+                    </div>
+                    <div class="date-period">September 2009 – July 2013</div>
+                    <div class="job-details">
+                        Main activities and responsibilities:
+                        <ul>
+                            <li>Software development and maintenance;</li>
+                            <li>Database design and administration;</li>
+                            <li>User support;</li>
+                            <li>Introducing new financial reports and maintenance old ones;</li>
+                            <li>Distributed databases synchronization;</li>
+                            <li>Corporate website development and support.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="cv-section-wrapper">
+            <div id="section-feedbacks" class="section-name">what people say</div>
+            <div class="section-list-item-wrapper">
+                <div class="section-list-item">
+                    <div class="user-name">Ihor Korolkov</div>
+                    <div class="company-name">Intellias<span class="company-location"> - L'viv, Ukraine</span></div>
+                    <div class="user-position">PhD, Senior Tech Lead at CTO office</div>
+                    <div class="user-feedback">Andriy has switched from desktop application development to a web
+                        developer role (PHP and
+                        JavaScript). He has easily adapted to the team and processes, coding standards and
+                        conventions.
+                        He
+                        is focused and attentive, strives to improve code quality. Andriy is easy learning person,
+                        ready
+                        to
+                        dig into details to get the solution done.
+                    </div>
+                </div>
+                <div class="section-list-item">
+                    <div class="user-name">Denys Shamrai</div>
+                    <div class="company-name">Intellias<span class="company-location"> - L'viv, Ukraine</span></div>
+                    <div class="user-position">Web Developer</div>
+                    <div class="user-feedback">Andriy has a strong knowledge in application architecture. He has
+                        great
+                        experience with php,
+                        javascript, SQL and with objective oriented programming at all. I was working with him more
+                        than
+                        1
+                        year and I have a good impression about our work. He always solved all issues correctly and
+                        in
+                        time.
+                    </div>
+                </div>
+                <div class="section-list-item">
+                    <div class="user-name">Solomiya Lemekh</div>
+                    <div class="company-name">Intellias<span class="company-location"> - L'viv, Ukraine</span></div>
+                    <div class="user-position">Automation Test Engineer</div>
+                    <div class="user-feedback">Andriy is an excellent specialist and a hard-working person. All
+                        tasks
+                        Andriy always do in time and
+                        with high quality. He is a great asset to the project.
+                    </div>
+                </div>
+                <div class="section-list-item">
+                    <div class="user-name">Volodymyr Steblii</div>
+                    <div class="company-name">Lohika<span class="company-location"> - L'viv, Ukraine</span></div>
+                    <div class="user-position">Front-end Developer</div>
+                    <div class="user-feedback">Smart developer who can easily change the technology stack, he is
+                        always
+                        precise to detail, likes to
+                        improve his skills, he can easily become an indispensable person in your team.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</body>
+</html>
