feat: implement cv

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -257,6 +257,15 @@
                             <li>Corporate website development and support.</li>
                         </ul>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="cv-section-wrapper">
+            <div id="section-languages" class="section-name">languages</div>
+            <div class="section-list-item-wrapper">
+                <div class="section-list-item">
+                    <div class="user-name">Ukrainian <span class="company-location">- Native</span>;</div>
+                    <div class="user-name">English <span class="company-location">- Upper-Intermediate</span>.</div>
                 </div>
             </div>
         </div>
