feat: add certificates section

--- a/index.html
+++ b/index.html
@@ -270,6 +270,35 @@
             </div>
         </div>
         <div class="cv-section-wrapper">
+            <div id="section-certificates" class="section-name">certificates</div>
+            <div class="section-list-item-wrapper">
+                <div class="section-list-item">
+                    <div class="job-title">Ultimate AWS Certified Solution Architect Associate 2022</div>
+                    <div class="company-name">Udemy</div>
+                    <div class="date-period">Issued Mar 2022 · No Expiration Date</div>
+                    <div class="job-details">Credential ID <a
+                            href="https://ude.my/UC-05850b3a-78fb-4e02-b056-d0afa99b4618" target="_blank">UC-05850b3a-78fb-4e02-b056-d0afa99b4618</a>
+                    </div>
+                </div>
+                <div class="section-list-item">
+                    <div class="job-title">Learn React by building and deploying production ready app</div>
+                    <div class="company-name">Udemy</div>
+                    <div class="date-period">Issued Dec 2018 · No Expiration Date</div>
+                    <div class="job-details">Credential ID <a
+                            href="https://udemy-certificate.s3.amazonaws.com/image/UC-0CK2TD4I.jpg" target="_blank">UC-0CK2TD4I</a>
+                    </div>
+                </div>
+                <div class="section-list-item">
+                    <div class="job-title">M101JS: MongoDB for Node.js Developers</div>
+                    <div class="company-name">Udemy</div>
+                    <div class="date-period">Issued Mar 2017 · No Expiration Date</div>
+                    <div class="job-details">Credential ID <a
+                            href="https://university.mongodb.com/course_completion/ca1307e8-3425-48cd-babe-55e787bf/printable" target="_blank">ca1307e8-3425-48cd-babe-55e787bf</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="cv-section-wrapper">
             <div id="section-feedbacks" class="section-name">what people say</div>
             <div class="section-list-item-wrapper">
                 <div class="section-list-item">
