feat: add favicons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="icons/fontawesome-free-6.2.1-web/css/brands.min.css">
     <link rel="stylesheet" href="icons/fontawesome-free-6.2.1-web/css/solid.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/icons/favicons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicons/favicon-16x16.png">
+    <link rel="manifest" href="/icons/favicons/manifest.json">
 </head>
 <body>
 <div id="page-wrapper">
