feat: add photo

--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
 <body>
 <div id="page-wrapper">
     <div id="header">
-        <div id="user-name">Andrii Melnychuk</div>
-        <div id="role-to-apply">Full stack JavaScript, Node.js, React, React Native Developer</div>
+        <div id="user-credentials">
+            <div id="profile-picture"><img src="/images/profile-picture-2021.jpg" alt="profile picture"/></div>
+            <div>
+                <div id="user-name">Andrii Melnychuk</div>
+                <div id="role-to-apply">Full stack JavaScript, Node.js, React, React Native Developer</div>
+            </div>
+        </div>
         <div id="contacts">
             <div><i class="fa-brands fa-linkedin"></i><a href="https://www.linkedin.com/in/andruhamel" target="_blank">LinkedIn</a></div>
             <div><i class="fa-brands fa-skype"></i><a href="https://join.skype.com/invite/oF7knmvd3nNS" target="_blank">Skype</a></div>
@@ -297,7 +302,8 @@
                     <div class="company-name">Udemy</div>
                     <div class="date-period">Issued Mar 2017 · No Expiration Date</div>
                     <div class="job-details">Credential ID <a
-                            href="https://university.mongodb.com/course_completion/ca1307e8-3425-48cd-babe-55e787bf/printable" target="_blank">ca1307e8-3425-48cd-babe-55e787bf</a>
+                            href="https://university.mongodb.com/course_completion/ca1307e8-3425-48cd-babe-55e787bf/printable"
+                            target="_blank">ca1307e8-3425-48cd-babe-55e787bf</a>
                     </div>
                 </div>
             </div>
